brain/sources/prod-metadata/objects/Session_Window__c/Session_Window__c.object-meta.xml
<CustomObject>
    <description>Recurring daily time window template. Defines a start/end time slot within a day that repeats across every day of a program. Child of Program_Version__c. Trainer is not stored on the template (assigned later per-session).</description>
    <label>Session Window</label>
    <nameField>
        <displayFormat>SW-{0000}</displayFormat>
        <label>Session Window Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Session Windows</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>