brain/sources/prod-metadata/objects/Session_Window__c/fields/Activate_From__c.field-meta.xml
<CustomField>
    <fullName>Activate_From__c</fullName>
    <description>Date from which this session window becomes visible to candidates on the portal. Auto-populated by the sessionWindowCreator LWC to Start Date - 7 days at creation. Admin can override to open the booking window earlier or later.</description>
    <label>Activate From</label>
    <type>Date</type>
</CustomField>