brain/sources/prod-metadata/objects/Session_Window__c/fields/Booked_Count__c.field-meta.xml
<CustomField>
    <fullName>Booked_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Running count of candidates who have booked this session window. Incremented by CandidatePortalController.bookSessionWindow. Used by the slot picker to compute Slots Available = Candidate_Capacity - Booked_Count.</description>
    <label>Booked Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>