brain/sources/prod-metadata/objects/Session_Window__c/fields/Candidate_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Capacity__c</fullName>
    <defaultValue>5</defaultValue>
    <description>Maximum candidates that can register for this session window. Candidate portal enforces 5 as its hard limit; internal admins/trainers can raise this value beyond 5 for special cases.</description>
    <label>Candidate Capacity</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>