brain/sources/prod-metadata/objects/Session_Window__c/fields/Cohort__c.field-meta.xml
<CustomField>
    <fullName>Cohort__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The cohort (batch / slot) this session window belongs to. Session windows recur across the days of the cohort&apos;s schedule.</description>
    <label>Cohort</label>
    <referenceTo>Cohort__c</referenceTo>
    <relationshipLabel>Session Windows</relationshipLabel>
    <relationshipName>Session_Windows</relationshipName>
    <type>Lookup</type>
</CustomField>