brain/sources/prod-metadata/objects/Session_Window__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <description>End time of the session window. Computed by the Program Creation LWC as Start_Time + Program_Version.Session_Duration_Min, then written on save. Values &lt; Start_Time indicate the window crosses midnight; runtime code interprets that as a next-day rollover.</description>
    <label>End Time</label>
    <required>true</required>
    <type>Time</type>
</CustomField>