brain/sources/prod-metadata/objects/Session_Window__c/fields/Program_Version__c.field-meta.xml
<CustomField>
    <fullName>Program_Version__c</fullName>
    <label>Program Version</label>
    <referenceTo>Program_Version__c</referenceTo>
    <relationshipLabel>Session Windows</relationshipLabel>
    <relationshipName>Session_Windows</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>