brain/sources/prod-metadata/objects/Session_Window__c/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <description>Display order of this window within the day. Determines the order presented to candidates in the booking picker.</description>
    <label>Sequence</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>