brain/sources/prod-metadata/objects/Session_Window__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Date this session window becomes active. Auto-populated from the parent Cohort&apos;s Start Date at creation time by the sessionWindowCreator LWC. Admin can override.</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>