brain/sources/prod-metadata/objects/Session_Window__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <description>Start time of the session window in the program&apos;s time zone. Recurs every day of the program.</description>
    <label>Start Time</label>
    <required>true</required>
    <type>Time</type>
</CustomField>