brain/sources/prod-metadata/objects/Session_Window__c/fields/Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Time_Zone__c</fullName>
    <description>Time zone in which the Start Time and End Time are expressed. Uses the shared Candidate_Time_Zone global value set for consistency with Candidate_Training and Session records.</description>
    <label>Time Zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Candidate_Time_Zone</valueSetName>
    </valueSet>
</CustomField>