brain/sources/prod-metadata/objects/Session_Window__c/fields/Trainer__c.field-meta.xml
<CustomField>
    <fullName>Trainer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Employee (Recruiter__c record) who hosts this session window.</description>
    <label>Trainer</label>
    <referenceTo>Recruiter__c</referenceTo>
    <relationshipLabel>Session Windows (Trainer)</relationshipLabel>
    <relationshipName>Session_Windows_Trainer</relationshipName>
    <type>Lookup</type>
</CustomField>