brain/sources/prod-metadata/objects/Session_Window__c/fields/Window_Label__c.field-meta.xml
<CustomField>
    <fullName>Window_Label__c</fullName>
    <description>Human-readable label for the session window (e.g. &quot;Morning Batch&quot;, &quot;Evening Batch&quot;).</description>
    <label>Window Label</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>